- Configuring fork in tests;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>